fixed button position of horizontal scrolling

--- a/HOME/Css/homeStyle.css
+++ b/HOME/Css/homeStyle.css
@@ -313,7 +313,7 @@ main {
     position: absolute;
     top: 0;
     width: 30px;
-    height: 100%;
+    height: 97.5%;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     cursor: pointer;
